Change Level y ajustes Monstruo

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -54,7 +54,7 @@ NewWindowPosition=(X=155,Y=53)
 NewWindowPosition=(X=1016,Y=105)
 NewWindowPosition=(X=155,Y=53)
 NewWindowPosition=(X=315,Y=143)
-NewWindowPosition=(X=2235,Y=143)
+NewWindowPosition=(X=155,Y=53)
 None=======
 None=======
 None=======
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Monster/AI
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 None=======
 None=======
@@ -1689,6 +1689,68 @@ MainMenuGM_C.Classes=True
 MainMenuGM_C.Game=True
 MainMenuGM_C.GameMode=True
 Actor.Input=True
+reja_C.TransformCommon=True
+reja_C.HLOD=False
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Rendering=True
+TriggerBox.Tags=True
+TriggerBox.Cooking=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+ChangeLevel_C.Tick=True
+ChangeLevel_C.Rendering=True
+ChangeLevel_C.Replication=True
+ChangeLevel_C.Input=True
+ChangeLevel_C.Actor=True
+ChangeLevel_C.TransformCommon=True
+ChangeLevel_C.Shape=True
+ChangeLevel_C.Navigation=True
+ChangeLevel_C.Physics=True
+ChangeLevel_C.Collision=True
+ChangeLevel_C.Tags=True
+ChangeLevel_C.Cooking=True
+REINST_ChangeLevel_C_116.TransformCommon=True
+REINST_ChangeLevel_C_116.Shape=True
+REINST_ChangeLevel_C_116.Navigation=True
+REINST_ChangeLevel_C_116.Physics=True
+REINST_ChangeLevel_C_116.Collision=True
+REINST_ChangeLevel_C_116.Rendering=True
+REINST_ChangeLevel_C_116.Tags=True
+REINST_ChangeLevel_C_116.Cooking=True
+REINST_ChangeLevel_C_116.Input=True
+REINST_ChangeLevel_C_116.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1708,12 +1770,15 @@ None=======
 None=======
 None=======
 OpenAssetsAtExit=/Game/Characters/Monster/AI/TransitionToFollow.TransitionToFollow
+OpenAssetsAtExit=/Game/Blueprints/Items/reja.reja
+OpenAssetsAtExit=/Game/Characters/Monster/Blueprint/Monster.Monster
+OpenAssetsAtExit=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
 ScreenPosition=X=459.000 Y=51.000
 ScreenPosition=X=215.000 Y=16.000
-ScreenPosition=X=2004.000 Y=172.000
+ScreenPosition=X=156.000 Y=66.000
 None=======
 None=======
 OpenAssetsAtExit=/Game/Characters/Monster/Blueprint/Monster.Monster
@@ -2419,7 +2484,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSett
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,ParticleModuleColorOverLife.Color.Points,ParticleModuleColorOverLife.Color.Constant,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,
 Monster_C=Monster_C.Collision.Collision,
-K2Node_VariableGet=Monster_C.Collision.Collision,
+K2Node_VariableGet=
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
 None=======
@@ -2482,9 +2547,9 @@ PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent=
+SceneComponent="\"Object.Shape.BoxExtent\" "
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Shape.BoxExtent\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
@@ -2524,7 +2589,7 @@ ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Shape.BoxExtent\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Monster_C=
 Character=
@@ -2675,6 +2740,7 @@ None=======
 /Game/Blueprints/FirstPersonCharacter_MainMenu.FirstPersonCharacter_MainMenu=0
 /Game/HUDs/MainMenu/MainMenuGM.MainMenuGM=0
 /Game/HUDs/MainMenu/MainMenu.MainMenu=0
+/Game/Blueprints/ChangeLevel.ChangeLevel=0
 
 [MaterialEditor]
 PrimType=1
@@ -2693,7 +2759,10 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/Blueprints/Items/palanca.palanca;
+RecentlyPlaced=/Game/Blueprints/Items/reja.reja;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -2710,9 +2779,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Rust.M_Metal_Rust;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Tech_Panel.M_Tech_Panel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2778,6 +2844,8 @@ StaticMesh.Collision=False
 PointLight.Actor=True
 Blueprint.ClassOptions=False
 Light.Actor=True
+reja_C.Actor=True
+StaticMeshComponent.Collision=True
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
