--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1758,9 +1758,13 @@ puertaInicio_C.Input=True
 puertaInicio_C.Actor=True
 puertaInicio_C.Tick=True
 puertaInicio_C.Replication=True
+ChangeLevel_C.Variable=True
+ChangeLevel_C.Sockets=True
+ChangeLevel_C.ComponentReplication=True
+ChangeLevel_C.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
@@ -1776,9 +1780,9 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Characters/Monster/AI/TransitionToFollow.TransitionToFollow
-OpenAssetsAtExit=/Game/Blueprints/FirstPersonCharacter.FirstPersonCharacter
+OpenAssetsAtExit=/Game/Blueprints/Items/reja.reja
 OpenAssetsAtExit=/Game/Blueprints/Items/puertaInicio.puertaInicio
+OpenAssetsAtExit=/Game/Characters/Monster/Blueprint/Monster.Monster
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2497,7 +2501,7 @@ None=======
 None=======
 BoolProperty=
 BoolProperty=
-K2Node_VariableSet=Monster_C.Collision.Collision,
+K2Node_VariableSet=
 ObjectProperty=Monster_C.Collision.Collision,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.General.BasePropertyOverrideGroup,
 ArrayProperty=Monster_C.Collision.Collision,
@@ -2506,7 +2510,7 @@ ArrayProperty=Monster_C.Collision.Collision,
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object=
+Object="\"Object.LightmassSettings\" "
 None=======
 None=======
 None=======
@@ -2747,6 +2751,7 @@ None=======
 /Game/HUDs/MainMenu/MainMenuGM.MainMenuGM=0
 /Game/HUDs/MainMenu/MainMenu.MainMenu=0
 /Game/Blueprints/ChangeLevel.ChangeLevel=0
+/Game/Blueprints/Items/puertaInicio.puertaInicio=0
 
 [MaterialEditor]
 PrimType=1
