--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Items
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 None=======
 None=======
@@ -1764,7 +1764,7 @@ ChangeLevel_C.ComponentReplication=True
 ChangeLevel_C.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
@@ -1780,9 +1780,12 @@ None=======
 None=======
 None=======
 None=======
+OpenAssetsAtExit=/Game/Blueprints/Items/llaveItem.llaveItem
+OpenAssetsAtExit=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable
 OpenAssetsAtExit=/Game/Blueprints/Items/reja.reja
-OpenAssetsAtExit=/Game/Blueprints/Items/puertaInicio.puertaInicio
-OpenAssetsAtExit=/Game/Characters/Monster/Blueprint/Monster.Monster
+OpenAssetsAtExit=/Game/Blueprints/Items/palanca.palanca
+OpenAssetsAtExit=/Game/Blueprints/Items/generadorUnlockable.generadorUnlockable
+OpenAssetsAtExit=/Game/Blueprints/Items/bidonItem.bidonItem
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2557,9 +2560,9 @@ PointLightComponent="\"Object.Light.LightColor\" "
 LightComponent="\"Object.Light.LightColor\" "
 LightComponentBase="\"Object.Light.LightColor\" "
 SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent=
+SceneComponent="\"Object.Shape.BoxExtent\" "
 ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent=
+ActorComponent="\"Object.Shape.BoxExtent\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
@@ -2599,7 +2602,7 @@ ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Shape.BoxExtent\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Monster_C=
 Character=
@@ -2770,9 +2773,10 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Blueprints/Items/llaveItem.llaveItem;
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Game/Blueprints/Items/puertaInicio.puertaInicio;
 RecentlyPlaced=/Game/Blueprints/Clock.Clock;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Blueprints/Items/palanca.palanca;
 RecentlyPlaced=/Game/Blueprints/Items/reja.reja;
@@ -2780,7 +2784,6 @@ RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactory
 RecentlyPlaced=/Game/Characters/Monster/Blueprint/Monster.Monster;
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/Materials/Paredes/suelo.suelo;
-RecentlyPlaced=/Game/Blueprints/Items/llaveItem.llaveItem;
 RecentlyPlaced=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable;
 RecentlyPlaced=/Game/Blueprints/Items/bidonItem.bidonItem;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
