Retoques Finales II

--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1762,9 +1762,13 @@ ChangeLevel_C.Variable=True
 ChangeLevel_C.Sockets=True
 ChangeLevel_C.ComponentReplication=True
 ChangeLevel_C.Events=True
+creditos_C.Tick=True
+creditos_C.Replication=True
+creditos_C.Input=True
+creditos_C.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 None=======
 None=======
@@ -1780,12 +1784,8 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Blueprints/Items/llaveItem.llaveItem
-OpenAssetsAtExit=/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable
-OpenAssetsAtExit=/Game/Blueprints/Items/reja.reja
-OpenAssetsAtExit=/Game/Blueprints/Items/palanca.palanca
 OpenAssetsAtExit=/Game/Blueprints/Items/generadorUnlockable.generadorUnlockable
-OpenAssetsAtExit=/Game/Blueprints/Items/bidonItem.bidonItem
+OpenAssetsAtExit=/Game/Levels/Game.Game:PersistentLevel.Game
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2398,8 +2398,8 @@ SequencerWidgets.LastCompileMethod=External
 
 [MRU]
 MRUItem0=/Game/Levels/Game
-MRUItem1=/Game/Levels/testManu
-MRUItem2=/Game/Levels/creditos
+MRUItem1=/Game/Levels/creditos
+MRUItem2=/Game/Levels/testManu
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/testDani
 MRUItem5=/Game/Levels/testGrego
@@ -2744,7 +2744,7 @@ None=======
 /Game/Blueprints/Items/bidonItem.bidonItem=0
 /Game/Blueprints/unlockable.unlockable=0
 /Game/Blueprints/BP_EscritorioCajon.BP_EscritorioCajon=0
-/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=1
+/Game/Blueprints/Items/candadoUnlockable.candadoUnlockable=0
 /Game/Levels/Game.Game:PersistentLevel.Game=0
 /Game/Blueprints/Items/llaveItem.llaveItem=0
 /Game/StaticMeshes/PuertaDer_Hierro.PuertaDer_Hierro=0
@@ -2755,6 +2755,7 @@ None=======
 /Game/HUDs/MainMenu/MainMenu.MainMenu=0
 /Game/Blueprints/ChangeLevel.ChangeLevel=0
 /Game/Blueprints/Items/puertaInicio.puertaInicio=0
+/Game/Levels/creditos.creditos:PersistentLevel.creditos=0
 
 [MaterialEditor]
 PrimType=1
