--- a/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TurnTheLightsOn/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Props
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 None=======
 None=======
@@ -126,7 +126,7 @@ LastLevel=/Game/Levels/testManu
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
 LastLevel=/Game/Levels/testGrego
-LastLevel=/Game/Levels/Game
+LastLevel=/Game/Levels/creditos
 None=======
 None=======
 None=======
@@ -1785,7 +1785,7 @@ None=======
 None=======
 None=======
 OpenAssetsAtExit=/Game/Blueprints/Items/generadorUnlockable.generadorUnlockable
-OpenAssetsAtExit=/Game/Levels/Game.Game:PersistentLevel.Game
+OpenAssetsAtExit=/Game/HUDs/creditos.creditos
 
 [RootWindow]
 ScreenPosition=X=215.000 Y=16.000
@@ -2397,8 +2397,8 @@ SequencerWidgets.TimeStamp=2017.11.06-10.17.42
 SequencerWidgets.LastCompileMethod=External
 
 [MRU]
-MRUItem0=/Game/Levels/Game
-MRUItem1=/Game/Levels/creditos
+MRUItem0=/Game/Levels/creditos
+MRUItem1=/Game/Levels/Game
 MRUItem2=/Game/Levels/testManu
 MRUItem3=/Game/Levels/MainMenu
 MRUItem4=/Game/Levels/testDani
@@ -2513,7 +2513,7 @@ ArrayProperty=Monster_C.Collision.Collision,
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 None=======
 None=======
 None=======
@@ -2623,8 +2623,8 @@ GeomModifier_Extrude="\"Object.Settings\" "
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
